# thel

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/actions/build-binary/: action.yml
.github/workflows/: build.yml  release.yml  test.yml
docs/: daemon.md  notifications.md  overview.md  pty-management.md
packaging/: com.joaquimrocha.thel.desktop  dev.thel.Thel.desktop
scripts/: generate-icon.cjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: daemon.rs  git.rs  lib.rs  main.rs  notify_cmd.rs  pty.rs
src/components/: ActionTooltip.tsx  AddIconDialog.tsx  BranchInput.tsx  CommandPalette.tsx  ConfirmDialog.tsx  DaemonSkewDialog.tsx  EditableLabel.tsx  LaunchersDialog.tsx  Logo.tsx  NewSessionDialog.tsx  NotificationsDialog.tsx  PathInput.tsx  ProfileDialog.tsx  ProfilesSettings.tsx  ResizeHandles.tsx  SessionSettingsDialog.tsx  SessionSidebar.tsx  SessionsDialog.tsx  SettingsDialog.tsx  ShortcutsDialog.tsx  StatusDot.tsx  SvgIcon.tsx  TerminalPane.tsx  TerminalSurface.tsx  TerminalTabs.tsx  Titlebar.tsx
src/components/ui/: button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  sonner.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/lib/: actions.ts  activity.ts  ansi.test.ts  ansi.ts  clipboard.test.ts  clipboard.ts  dragReorder.test.ts  dragReorder.ts  focus.test.ts  focus.ts  git.ts  keymap.test.ts  keymap.ts  launch.ts  paths.ts  persistDebounce.ts  persistence.test.ts  persistence.ts  platform.ts  pty.ts  storeFile.ts  systemNotify.ts  termActivity.test.ts  termActivity.ts  theme.ts  useBusyPolling.ts  useGlobalShortcuts.ts  utils.ts
src/store/: icons.ts  keybindings.test.ts  keybindings.ts  launchers.ts  notifications.test.ts  notifications.ts  prefs.ts  profiles.ts  sessions.test.ts  sessions.ts  theme.ts  ui.test.ts  ui.ts
tests/: README.md  a11y.spec.ts  app.ts  attention.spec.ts  coverage-setup.ts  coverage-teardown.ts  coverage.ts  extra.spec.ts  features.spec.ts  help.spec.ts  interactions.spec.ts  launchers.spec.ts  memory.spec.ts  misc.spec.ts  navigation.spec.ts  new-session.spec.ts  persistence.spec.ts  profiles.spec.ts  rename.spec.ts  reorder.spec.ts  session-icons.spec.ts  sessions.spec.ts  settings.spec.ts  shortcuts.spec.ts  smoke.spec.ts  startup-bench.spec.ts  tauri.ts  terminal-exit.spec.ts  titlebar.spec.ts  window-close.spec.ts  worktree-close.spec.ts
website/: index.html  package.json  pnpm-lock.yaml
website/src/: App.tsx  index.css
