[package]
name = "thel"
version = "0.1.0-beta"
description = "Terminal helper built for AI coding agents and other long-running sessions"
authors = ["Joaquim Rocha"]
edition = "2021"
license = "Apache-2.0"

[lib]
# The desktop entrypoint links against this lib; the name is referenced by main.rs.
name = "thel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
parking_lot = "0.12"
# Authoritative server-side terminal state for the daemon: parses PTY output into
# a grid and re-emits it as escape sequences (contents_formatted) for reattach.
vt100 = "0.15"

# Daemon detach (setsid, SIGHUP ignore) and, later, the SO_PEERCRED check.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Present the window with the XDG activation token from a clicked notification,
# so Wayland lets it raise (gtk_window().set_startup_id + present). Matches the
# gtk Tauri already pulls in.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

# Desktop notifications on macOS/Windows. On Linux we shell out to notify-send
# instead, so the binary doesn't pull notify-rust's zbus/async stack.
[target.'cfg(not(target_os = "linux"))'.dependencies]
notify-rust = "4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
